# unpacking

./: .gitignore  CMakeLists.txt  README.md
python/: detector_mapping.json  detector_mapping.py
setup/: setup.sh
src/: main.cc
src/dataProducts/: CMakeLists.txt  ChannelHeader.cc  ChannelHeader.hh  DataProduct.cc  DataProduct.hh  FC7Header.cc  FC7Header.hh  LinkDef.h  WFD5Header.cc  WFD5Header.hh  Waveform.cc  Waveform.hh  WaveformHeader.cc  WaveformHeader.hh
src/serializer/: CMakeLists.txt  Serializer.cc  Serializer.hh
src/unpackers/: BankUnpacker.cc  BankUnpacker.hh  BasicEventUnpacker.cc  BasicEventUnpacker.hh  CMakeLists.txt  CRBankUnpacker.cc  CRBankUnpacker.hh  CollectionsHolder.cc  CollectionsHolder.hh  EventUnpacker.cc  EventUnpacker.hh  FC7Unpacker.cc  FC7Unpacker.hh  PayloadUnpacker.cc  PayloadUnpacker.hh  Unpacker.cc  Unpacker.hh  UnpackerHelpers.cc  UnpackerHelpers.hh  WFD5Unpacker.cc  WFD5Unpacker.hh
src/unpackers/parsers/: ChannelHeaderParser.cc  ChannelHeaderParser.hh  FC7HeaderParser.cc  FC7HeaderParser.hh  Parser.cc  Parser.hh  WFD5HeaderParser.cc  WFD5HeaderParser.hh  WaveformHeaderParser.cc  WaveformHeaderParser.hh  WaveformParser.cc  WaveformParser.hh
src/unpackers/utils/: Logger.cc  Logger.hh
